--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header>
         <!-- Character Image + Name -->
         <div>
-          <img src="#" alt="character-main-image" />
+          <img src="public/images/ai-profile.png" alt="character-main-image" />
           <span>Lorem, ipsum dolor.</span>
         </div>
         <!-- /Character Image + Name -->
@@ -49,7 +49,7 @@
         <!-- Character Balloon -->
         <div>
           <!-- Character Image -->
-          <img src="#" alt="" />
+          <img src="public/images/ai-profile.png" alt="character-image-chat" />
           <!-- Character Image -->
 
           <!-- Message Content -->
@@ -69,7 +69,7 @@
         <!-- User Balloon -->
         <div>
           <!-- User Image -->
-          <img src="#" alt="" />
+          <img src="public/images/ai-profile.png" alt="user-image-chat" />
           <!-- User Image -->
 
           <!-- Message Content -->
