feat: Centers background image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- /Go back button + Last Chats -->
 
     <!-- Main Content -->
-    <main>
+    <main class="main-content">
       <!-- Header -->
       <header>
         <!-- Character Image + Name -->
