feat: Changes imgs to divs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header>
         <!-- Character Image + Name -->
         <div>
-          <img src="public/images/ai-profile.png" alt="character-main-image" />
+          <div class="profile-image"></div>
           <span>Lorem, ipsum dolor.</span>
         </div>
         <!-- /Character Image + Name -->
@@ -50,7 +50,7 @@
         <!-- Character Balloon -->
         <div>
           <!-- Character Image -->
-          <img src="public/images/ai-profile.png" alt="character-image-chat" />
+          <div class="profile-image"></div>
           <!-- Character Image -->
 
           <!-- Message Content -->
@@ -70,7 +70,7 @@
         <!-- User Balloon -->
         <div>
           <!-- User Image -->
-          <img src="public/images/ai-profile.png" alt="user-image-chat" />
+          <div class="profile-image"></div>
           <!-- User Image -->
 
           <!-- Message Content -->
