feat: Adds profile-image and character-image styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header>
         <!-- Character Image + Name -->
         <div>
-          <div class="profile-image"></div>
+          <div class="profile-image character-profile-image"></div>
           <span>Lorem, ipsum dolor.</span>
         </div>
         <!-- /Character Image + Name -->
@@ -50,7 +50,7 @@
         <!-- Character Balloon -->
         <div>
           <!-- Character Image -->
-          <div class="profile-image"></div>
+          <div class="profile-image character-profile-image"></div>
           <!-- Character Image -->
 
           <!-- Message Content -->
@@ -70,7 +70,8 @@
         <!-- User Balloon -->
         <div>
           <!-- User Image -->
-          <div class="profile-image"></div>
+          <!-- TODO: Change to user-profile-image -->
+          <div class="profile-image character-profile-image"></div>
           <!-- User Image -->
 
           <!-- Message Content -->
