feat: Adds overlay div + background image div + centered background image div

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
 
   <body>
+    <!-- Overlay -->
+    <div class="overlay"></div>
+    <!-- /Overlay -->
+
+    <!-- Background image -->
+    <div class="background-image">
+      <div class="vinhete"></div>
+      <div class="vinhete"></div>
+    </div>
+    <!-- /Background image -->
+
+    <!-- Centered background image -->
+    <div class="background-image-centered"></div>
+    <!-- /Centered background image -->
+
     <!-- Go back button + Last Chats -->
     <div>
       <!-- Go back -->
