feat: Removes main tag + moves all main content into a new div that has an image to be the centered iamge

--- a/index.html
+++ b/index.html
@@ -20,45 +20,14 @@
     <!-- /Background image -->
 
     <!-- Centered background image -->
-    <div class="background-image-centered"></div>
-    <!-- /Centered background image -->
-
-    <!-- Go back button + Last Chats -->
-    <div>
-      <!-- Go back -->
-      <button></button>
-      <!-- /Go back -->
-
-      <!-- Last chats -->
-      <span></span>
-      <!-- /Last chats -->
-    </div>
-    <!-- /Go back button + Last Chats -->
-
-    <!-- Main Content -->
-    <main class="main-content">
-      <!-- Header -->
-      <header>
-        <!-- Character Image + Name -->
-        <div>
-          <div class="profile-image character-profile-image"></div>
-          <span>Lorem, ipsum dolor.</span>
-        </div>
-        <!-- /Character Image + Name -->
-
-        <!-- Model + Config -->
-        <div>
-          <!-- Model Name -->
-          <div>Lorem, ipsum dolor.</div>
-          <!-- /Model Name -->
-
-          <!-- Config -->
-          <div>⚙️</div>
-          <!-- /Config -->
-        </div>
-        <!-- Model + Config -->
-      </header>
-      <!-- /Header -->
+    <div class="background-image-centered">
+      <img src="./public/images/background.png" alt="" />
+      <!-- Character Image + Name -->
+      <div class="character-image-and-name">
+        <div class="profile-image character-profile-image"></div>
+        <span>Lorem, ipsum dolor.</span>
+      </div>
+      <!-- /Character Image + Name -->
 
       <!--Message container  -->
       <div>
@@ -124,7 +93,35 @@
         <!-- /Input message + continue button -->
       </div>
       <!-- /Input message container -->
-    </main>
-    <!-- /Main Content -->
+    </div>
+    <!-- /Centered background image -->
+
+    <!-- Go back button + Last Chats -->
+    <div>
+      <!-- Go back -->
+      <button></button>
+      <!-- /Go back -->
+
+      <!-- Last chats -->
+      <span></span>
+      <!-- /Last chats -->
+    </div>
+    <!-- /Go back button + Last Chats -->
+
+    <!-- Header -->
+    <header>
+      <!-- Model + Config -->
+      <div>
+        <!-- Model Name -->
+        <div>Lorem, ipsum dolor.</div>
+        <!-- /Model Name -->
+
+        <!-- Config -->
+        <div>⚙️</div>
+        <!-- /Config -->
+      </div>
+      <!-- Model + Config -->
+    </header>
+    <!-- /Header -->
   </body>
 </html>
