feat: Adds styling to the top character name + adds member count

--- a/index.html
+++ b/index.html
@@ -22,77 +22,91 @@
     <!-- Centered background image -->
     <div class="background-image-centered">
       <img src="./public/images/background.png" alt="" />
-      <!-- Character Image + Name -->
-      <div class="character-image-and-name">
-        <div class="profile-image character-profile-image"></div>
-        <span>Lorem, ipsum dolor.</span>
-      </div>
-      <!-- /Character Image + Name -->
 
-      <!--Message container  -->
-      <div>
-        <!-- Character Balloon -->
-        <div>
-          <!-- Character Image -->
-          <div class="profile-image character-profile-image"></div>
-          <!-- Character Image -->
-
-          <!-- Message Content -->
-          <div>
-            <!-- Character name -->
-            <span></span>
-            <!-- /Character name -->
-
-            <!-- Character message content -->
-            <span></span>
-            <!-- /Character message content -->
+      <!-- Main Content -->
+      <div class="main-content">
+        <!-- Character Image + Name -->
+        <div class="character-image-and-name">
+          <div class="profile-image">
+            <img src="./public/images/ai-profile.png" alt="" />
           </div>
-          <!-- /Message Content -->
-        </div>
-        <!-- /Character Balloon -->
-
-        <!-- User Balloon -->
-        <div>
-          <!-- User Image -->
-          <!-- TODO: Change to user-profile-image -->
-          <div class="profile-image character-profile-image"></div>
-          <!-- User Image -->
-
-          <!-- Message Content -->
-          <div>
-            <!-- User name -->
-            <span></span>
-            <!-- /User name -->
-
-            <!-- User message content -->
-            <span></span>
-            <!-- /User message content -->
+          <div class="name-and-member-count">
+            <span class="character-name">Lorem, ipsum dolor.</span>
+            <span class="member-count">2 members</span>
           </div>
-          <!-- /Message Content -->
         </div>
-        <!-- /User Balloon -->
-      </div>
-      <!--/Message container  -->
+        <!-- /Character Image + Name -->
 
-      <!-- Input message container -->
-      <div>
-        <!-- Config -->
-        <div></div>
-        <!-- /Config -->
-
-        <!-- Input message + continue button -->
+        <!--Message container  -->
         <div>
-          <!-- Input message -->
-          <input type="text" placeholder="Message..." />
-          <!-- /Input message -->
+          <!-- Character Balloon -->
+          <div>
+            <!-- Character Image -->
+            <div class="profile-image">
+              <img src="./public/images/ai-profile.png" alt="" />
+            </div>
+            <!-- Character Image -->
 
-          <!-- Continue button -->
-          <span></span>
-          <!-- Continue button -->
+            <!-- Message Content -->
+            <div>
+              <!-- Character name -->
+              <span></span>
+              <!-- /Character name -->
+
+              <!-- Character message content -->
+              <span></span>
+              <!-- /Character message content -->
+            </div>
+            <!-- /Message Content -->
+          </div>
+          <!-- /Character Balloon -->
+
+          <!-- User Balloon -->
+          <div>
+            <!-- User Image -->
+            <!-- TODO: Change to user-profile-image -->
+            <div class="profile-image">
+              <img src="./public/images/ai-profile.png" alt="" />
+            </div>
+            <!-- User Image -->
+
+            <!-- Message Content -->
+            <div>
+              <!-- User name -->
+              <span></span>
+              <!-- /User name -->
+
+              <!-- User message content -->
+              <span></span>
+              <!-- /User message content -->
+            </div>
+            <!-- /Message Content -->
+          </div>
+          <!-- /User Balloon -->
         </div>
-        <!-- /Input message + continue button -->
+        <!--/Message container  -->
+
+        <!-- Input message container -->
+        <div>
+          <!-- Config -->
+          <div></div>
+          <!-- /Config -->
+
+          <!-- Input message + continue button -->
+          <div>
+            <!-- Input message -->
+            <input type="text" placeholder="Message..." />
+            <!-- /Input message -->
+
+            <!-- Continue button -->
+            <span></span>
+            <!-- Continue button -->
+          </div>
+          <!-- /Input message + continue button -->
+        </div>
+        <!-- /Input message container -->
       </div>
-      <!-- /Input message container -->
+      <!-- /Main Content -->
     </div>
     <!-- /Centered background image -->
 
