feat: Adds character balloon styles

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <!-- /Character Image + Name -->
 
         <!--Message container  -->
-        <div>
+        <div class="message-container">
           <!-- Character Balloon -->
-          <div>
+          <div class="character-message-balloon">
             <!-- Character Image -->
             <div class="profile-image">
               <img src="./public/images/ai-profile.png" alt="" />
@@ -48,13 +48,21 @@
             <!-- Character Image -->
 
             <!-- Message Content -->
-            <div>
+            <div class="character-message-content">
               <!-- Character name -->
-              <span></span>
+              <span>Lorem, ipsum dolor.</span>
               <!-- /Character name -->
 
               <!-- Character message content -->
-              <span></span>
+              <span
+                >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Fugiat ut illum ipsam beatae commodi aperiam obcaecati
+                consectetur corrupti voluptatibus et iste eligendi molestias
+                voluptatem, enim sunt quibusdam ipsum quaerat atque officiis!
+                Officia hic quo distinctio dolores, eligendi, recusandae
+                officiis a necessitatibus facilis placeat, assumenda atque sit
+                aut exercitationem porro dolore.</span
+              >
               <!-- /Character message content -->
             </div>
             <!-- /Message Content -->
