feat: Adds styles for message input

--- a/index.html
+++ b/index.html
@@ -113,19 +113,22 @@
         <!--/Message container  -->
 
         <!-- Input message container -->
-        <div>
+        <div class="input-message-container">
           <!-- Config -->
-          <div></div>
+          <div>⚙️</div>
           <!-- /Config -->
 
           <!-- Input message + continue button -->
-          <div>
+          <div class="input-message-continue-button-container">
             <!-- Input message -->
-            <input type="text" placeholder="Message..." />
+            <textarea type="text" placeholder="Message..." rows="1"></textarea>
             <!-- /Input message -->
 
             <!-- Continue button -->
-            <span></span>
+            <span>
+              <span>➡️</span>
+              Continue
+            </span>
             <!-- Continue button -->
           </div>
           <!-- /Input message + continue button -->
