--- a/index.html
+++ b/index.html
@@ -151,20 +151,16 @@
     </div>
     <!-- /Go back button + Last Chats -->
 
-    <!-- Header -->
-    <header>
-      <!-- Model + Config -->
-      <div>
-        <!-- Model Name -->
-        <div>Lorem, ipsum dolor.</div>
-        <!-- /Model Name -->
+    <!-- Model + Config -->
+    <div class="model-and-config">
+      <!-- Model Name -->
+      <div>Lorem, ipsum dolor.</div>
+      <!-- /Model Name -->
 
-        <!-- Config -->
-        <div>⚙️</div>
-        <!-- /Config -->
-      </div>
-      <!-- Model + Config -->
-    </header>
-    <!-- /Header -->
+      <!-- Config -->
+      <div>⚙️</div>
+      <!-- /Config -->
+    </div>
+    <!-- Model + Config -->
   </body>
 </html>
